--- a/_posts/2024-01-28-u1.md
+++ b/_posts/2024-01-28-u1.md
@@ -4,7 +4,7 @@ title: "Utilities #1"
 permalink: "u1"
 categories: [Platform Engineering, ServiceNow]
 tags: ["utilities" , "ut1" , "js"] # TAG names should always be lowercase
-image: /images/utilities/1.jpg
+# image: /images/utilities/1.jpg
 
 
 ---
@@ -24,7 +24,6 @@ image: /images/utilities/1.jpg
 
 
 
-{{< collapse "Log any type" >}}
   ```js 
 function printLogMessage(obj) {
     if (typeof obj === 'object') {
@@ -39,13 +38,9 @@ function printLogMessage(obj) {
 
 
 
-{{< /collapse >}}
 
 
 
-
-
-{{< collapse "Create a record many times - taking into account reference fields" >}}
   
 ```js 
 function insertRecordsWithReferences(tableName, numRecords, fieldsAndValues) {
@@ -92,12 +87,7 @@ insertRecordsWithReferences(tableName, numRecords, fieldsAndValues);
 
 
 ```
-{{< /collapse >}}
 
-
-
-{{< collapse "Query & update records with value objects - taking into account reference fields for both" >}}
-  
 
 ```js 
 function queryAndUpdateRecords(tableName, queryFields, updateValues) {
@@ -160,11 +150,7 @@ queryAndUpdateRecords(tableName, queryFields, updateValues);
 
 ```
 
-{{< /collapse >}}
 
-
-
-{{< collapse "Delete records given their sys_ids" >}}
  
 ```js
 function deleteRecords(tableName, sysIds) {
@@ -177,18 +163,16 @@ deleteRecords('incident', ['sys_id1', 'sys_id2', 'sys_id3']);
 
 
 ```
-{{< /collapse >}}
 
 
 
 
 
 
-{{< notice "tip" >}}
-  It's convenient to test these background scripts using the `Scripts - Background` module
 
+> It's convenient to test these background scripts using the `Scripts - Background` module
+{: .prompt-tip }
 
-{{< /notice >}}
 
 
 
