Some blog-wide updates

--- a/_posts/2024-01-28-u1.md
+++ b/_posts/2024-01-28-u1.md
@@ -1,190 +1,143 @@
 ---
 layout: post
-title: "Utilities #1"
+title: "Utility Javascript Functions to Reuse in ServiceNow Development"
 permalink: "u1"
 categories: [Platform Engineering, ServiceNow]
-tags: ["utilities" , "ut1" , "js"] # TAG names should always be lowercase
+tags: ["utilities", "ut1", "js"] # TAG names should always be lowercase
 # image: /images/utilities/1.jpg
-
-
 ---
 
+#### Provided are samples and their usages for different use cases:
 
-
-
-
->  This blog series aims to provide general purpose utilities in scripting we come across during our projects development within the platform.
-
-
-#### we provide samples and their usages for different use cases: 
-
-
-
-
-
-
-
-  ```js 
+```js
 function printLogMessage(obj) {
-    if (typeof obj === 'object') {
-        gs.info('Log Message: ' + JSON.stringify(obj));
-    } else {
-        gs.info('Log Message: ' + obj);
-    }
+  if (typeof obj === "object") {
+    gs.info("Log Message: " + JSON.stringify(obj));
+  } else {
+    gs.info("Log Message: " + obj);
+  }
 }
-
 ```
 
-
-
-
-
-
-
-  
-```js 
+```js
 function insertRecordsWithReferences(tableName, numRecords, fieldsAndValues) {
-    var gr = new GlideRecord(tableName);
-    
-    for (var i = 0; i < numRecords; i++) {
-        gr.initialize();
-        
-        // Set field values based on the input object
-        for (var field in fieldsAndValues) {
-            if (fieldsAndValues.hasOwnProperty(field)) {
-                var value = fieldsAndValues[field];
-                
-                // Check if the field is a reference type
-                if (JSON.stringify(gr[field].getED().getInternalType()) === '"reference"') {
+  var gr = new GlideRecord(tableName);
 
-                    var referenceGR = new GlideRecord(value.table);
-                    if (referenceGR.get(value.sysId)) {
-                        gr[field]= referenceGR.sys_id;
-                    }
-                } else {
-                    gr.setValue(field, value);
-                }
-            }
+  for (var i = 0; i < numRecords; i++) {
+    gr.initialize();
+
+    // Set field values based on the input object
+    for (var field in fieldsAndValues) {
+      if (fieldsAndValues.hasOwnProperty(field)) {
+        var value = fieldsAndValues[field];
+
+        // Check if the field is a reference type
+        if (
+          JSON.stringify(gr[field].getED().getInternalType()) === '"reference"'
+        ) {
+          var referenceGR = new GlideRecord(value.table);
+          if (referenceGR.get(value.sysId)) {
+            gr[field] = referenceGR.sys_id;
+          }
+        } else {
+          gr.setValue(field, value);
         }
-        
-        gr.insert();
+      }
     }
+
+    gr.insert();
+  }
 }
 
 // Usage example
-var tableName = 'incident';
+var tableName = "incident";
 var numRecords = 5;
 var fieldsAndValues = {
-    short_description: 'This is a short description',
-    priority: 'High',
-    assigned_to: {
-        table: 'sys_user',
-        sysId: '6816f79cc0a8016401c5a33be04be441'
-    }
+  short_description: "This is a short description",
+  priority: "High",
+  assigned_to: {
+    table: "sys_user",
+    sysId: "6816f79cc0a8016401c5a33be04be441",
+  },
 };
 
 insertRecordsWithReferences(tableName, numRecords, fieldsAndValues);
-
-
 ```
 
-
-```js 
+```js
 function queryAndUpdateRecords(tableName, queryFields, updateValues) {
-    var gr = new GlideRecord(tableName);
-    
-    // Build the query based on the provided query fields
-    for (var field in queryFields) {
-        if (queryFields.hasOwnProperty(field)) {
-            var value = queryFields[field];
-            
-            // Handle reference types for query fields
-            if (typeof value === 'object' && value.hasOwnProperty('sys_id')) {
-                gr.addQuery(field, 'IN', value.sys_id);
-            } else {
-                gr.addQuery(field, value);
-            }
-        }
+  var gr = new GlideRecord(tableName);
+
+  // Build the query based on the provided query fields
+  for (var field in queryFields) {
+    if (queryFields.hasOwnProperty(field)) {
+      var value = queryFields[field];
+
+      // Handle reference types for query fields
+      if (typeof value === "object" && value.hasOwnProperty("sys_id")) {
+        gr.addQuery(field, "IN", value.sys_id);
+      } else {
+        gr.addQuery(field, value);
+      }
     }
-    
-    gr.query();
-    
-    // Update the records with the provided update values
-    while (gr.next()) {
-        for (var field in updateValues) {
-            if (updateValues.hasOwnProperty(field)) {
-                var value = updateValues[field];
-                
-                // Handle reference types for update values
-                if (typeof value === 'object' && value.hasOwnProperty('sys_id')) {
-                    gr[field] = value.sys_id;
-                } else {
-                    gr[field] = value;
-                }
-            }
+  }
+
+  gr.query();
+
+  // Update the records with the provided update values
+  while (gr.next()) {
+    for (var field in updateValues) {
+      if (updateValues.hasOwnProperty(field)) {
+        var value = updateValues[field];
+
+        // Handle reference types for update values
+        if (typeof value === "object" && value.hasOwnProperty("sys_id")) {
+          gr[field] = value.sys_id;
+        } else {
+          gr[field] = value;
         }
-        
-        gr.update();
+      }
     }
+
+    gr.update();
+  }
 }
 
 // Example usage
-var tableName = 'incident';
+var tableName = "incident";
 var queryFields = {
-    'priority': '1',
-    'state': '2' ,
-    'short_description' : 'whatever'
+  priority: "1",
+  state: "2",
+  short_description: "whatever",
 };
 
-
 var updateValues = {
-    'assigned_to': {
-        'sys_id': 'sys_id-example'
-    },
-    'comments': 'Updated comments'
+  assigned_to: {
+    sys_id: "sys_id-example",
+  },
+  comments: "Updated comments",
 };
 
 queryAndUpdateRecords(tableName, queryFields, updateValues);
-
-
-
 ```
 
-
- 
 ```js
 function deleteRecords(tableName, sysIds) {
-    var gr = new GlideRecord(tableName);
-    gr.addQuery('sys_id', 'IN', sysIds);
-    gr.deleteMultiple();
+  var gr = new GlideRecord(tableName);
+  gr.addQuery("sys_id", "IN", sysIds);
+  gr.deleteMultiple();
 }
 // Delete records from the "incident" table with specified sys_ids
-deleteRecords('incident', ['sys_id1', 'sys_id2', 'sys_id3']);
-
-
+deleteRecords("incident", ["sys_id1", "sys_id2", "sys_id3"]);
 ```
 
-
-
-
-
-
-
 > It's convenient to test these background scripts using the `Scripts - Background` module
-{: .prompt-tip }
-
-
-
+> {: .prompt-tip }
 
 ![]({{ site.baseurl }}/images/utilities/tip1.png)
 
-
-
-
 ![]({{ site.baseurl }}/images/utilities/tip2.png)
 
+---
 
-
-
------------------
 > See you in the next one 👋
