--- a/_posts/2024-06-08-oauth2.0.md
+++ b/_posts/2024-06-08-oauth2.0.md
@@ -1,9 +1,17 @@
 ---
 layout: post
-title: "Oauth 2.0"
-permalink: "ouauth"
+title: "Oauth 2.0 - Part 1"
+permalink: "ouauth-p1"
 categories: [Cyber Security, Protocols]
-tags: ["utilities", "ut1", "js"] # TAG names should always be lowercase
+tags: [
+    "http redirect",
+    "curl",
+    "python",
+    "webhooks",
+    "SAML",
+    "ADFS",
+    "Active Directory",
+  ] # TAG names should always be lowercase
 # image: /images/utilities/1.jpg
 ---
 
@@ -222,8 +230,4 @@ End Result
 
 ---
 
-> See you in the next one 👋
-
-```
-
-```
+> To be continued...
